tests/parsing/smtlib/poly/errors/093_get-info_bad_flag_1.psmt2
(set-logic ALL)
(get-info foo)
