tests/parsing/smtlib/poly/errors/093_get-info_bad_flag_1.expected
File "tests/parsing/smtlib/poly/errors/093_get-info_bad_flag_1.psmt2", line 2, character 10-13:
Error while parsing a get-info command, read the symbol 'foo',
      but expected a keyword of the form ":symbol".
